Homepage grid pt 2

--- a/app/views/partials/theme/simple/items/card.liquid
+++ b/app/views/partials/theme/simple/items/card.liquid
@@ -1,4 +1,4 @@
-<div class="px-0 mb-8 md:p-4 card">
+<div>
   {% function_rc item_url = 'link_to', path: '/items/', item: item %}
 
   <a class="relative block h-64 overflow-hidden rounded shadow-sm" href="{{ item_url }}">
