--- a/app/views/partials/theme/simple/home/card.liquid
+++ b/app/views/partials/theme/simple/home/card.liquid
@@ -1,34 +1,29 @@
-<div class="mb-8 overflow-hidden bg-white rounded">
+<div class="flex flex-col mb-8 bg-white rounded shadow">
   {% if object.photo %}
-  <a class="block h-64 overflow-hidden shadow-sm" href="{{ object.url }}">
-    <img alt="{{ object.name | default: object.id | truncate: 120 }}" class="block object-cover object-center w-full h-full" src="{{ object.photo.url.versions.small }}">
-  </a>
+    <a class="block w-full h-64 overflow-hidden rounded-tl rounded-tr" href="{{ object.url }}">
+      <img alt="{{ object.name | default: object.id | truncate: 120 }}" class="block object-cover object-center w-full h-full" src="{{ object.photo.url.versions.small }}">
+    </a>
   {% elsif target.photo %}
-  <a class="block h-64 overflow-hidden shadow-sm" href="{{ target.url }}">
-    <img alt="{{ target.name | default: object.id | truncate: 120 }}" class="block object-cover object-center w-full h-full" src="{{ target.photo.url.versions.small }}">
-  </a>
+    <a class="block w-full h-64 overflow-hidden rounded-tl rounded-tr" href="{{ target.url }}">
+      <img alt="{{ target.name | default: object.id | truncate: 120 }}" class="block object-cover object-center w-full h-full" src="{{ target.photo.url.versions.small }}">
+    </a>
   {% endif %}
 
-  <div class="md:p-4">
-    <header class="text-xs text-gray-600">
-      {% print type | t: scope: 'app.home.feeds.header' %}
-    </header>
+  <div class="p-4">
+    <h2 class="text-lg font-medium text-gray-900 ">
+      <a href="{% render 'link_to', comment: target %}">{{ item.name }}</a>
+    </h2>
 
-    <div class="mt-4">
-      <h2 class="text-lg font-medium text-gray-900 ">
-        <a href="{% render 'link_to', comment: target %}">{{ item.name }}</a>
-      </h2>
+    <p class="text-lg font-semibold">{{ object.name }}</p>
 
-      <div class="justify-between text-xs">
-        <div class="font-semibold text-medium">{% print object.name %}</div>
+    <p class="mt-2 break-all">
+      {% echo object.body | default: object.description | default: object.bio %}
+    </p>
+  </div>
 
-        {% echo object.body | default: object.description | default: object.bio %}
-      </div>
-      <div class="flex">
-        <h3 class="mb-1 ml-auto text-xs">
-          {% render 'theme/simple/business_card', user: actor, current_profile: current_profile %}
-        </h3>
-      </div>
-    </div>
+  <div class="flex p-4 mt-auto">
+    <h3 class="ml-auto">
+      {% render 'theme/simple/business_card', user: actor, current_profile: current_profile %}
+    </h3>
   </div>
 </div>
