--- a/app/views/partials/theme/simple/home/index.liquid
+++ b/app/views/partials/theme/simple/home/index.liquid
@@ -3,9 +3,9 @@
 {% for feed in feeds %}
   {% if feed[1].results.size > 0 %}
     <section>
-      <div class="mb-4 text-3xl">
+      <h3 class="mb-3 text-3xl">
         {% print feed[0] | t: scope: 'app.home.feeds' %}
-      </div>
+      </h3>
       <div class="grid grid-cols-3 gap-5">
         {% for item in feed[1].results %}
           {% include 'theme/simple/home/card', actor: item.payload.actor, target: item.payload.target, object: item.payload.object, type: item.payload.type %}
