--- a/app/views/partials/theme/simple/profile/user_card.liquid
+++ b/app/views/partials/theme/simple/profile/user_card.liquid
@@ -7,18 +7,16 @@
   %}
   <img class="object-cover object-center w-24 h-24 mx-auto rounded-full shadow-md md:h-48 md:w-48" src="{{ img_url }}" alt="{{ user.slug }}">
 
-  <div class="p-6">
-    <h2 class="mb-1 font-medium text-gray-900">
-      <a href="/profile/{{ user.slug }}">
-        {% print user.name %}
-      </a>
-    </h2>
-    <div class="flex flex-wrap items-center ">
-      {% render 'theme/simple/follow_button', current_profile: current_profile, user: user %}
-      <span class="inline-flex items-center py-1 pr-3 ml-auto mr-3 text-sm leading-none text-gray-600 lg:ml-auto md:ml-0" title="Following">
-        <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"> <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path> <circle cx="12" cy="12" r="3"></circle> </svg>
-        1.2K
-      </span>
-    </div>
+  <div class="flex items-center justify-between p-6">
+    {% render 'theme/simple/follow_button', current_profile: current_profile, user: user %}
+
+    <a href="/profile/{{ user.slug }}" class="mb-1 ml-3 font-medium text-gray-900">
+      {{ user.name }}
+    </a>
+
+    <span class="inline-flex text-right text-gray-600 items-centertext-sm lg:ml-auto md:ml-0" title="Following">
+      <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"> <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path> <circle cx="12" cy="12" r="3"></circle> </svg>
+      1.2K
+    </span>
   </div>
 </div>
