--- a/app/views/partials/theme/simple/profile/card.liquid
+++ b/app/views/partials/theme/simple/profile/card.liquid
@@ -1,11 +1,10 @@
-<div class="flex flex-col">
-  <div class="mr-10">
-    {% liquid
-      assign img_url = user.avatar.photo.versions.small
-      unless img_url
-        assign img_url = 'images/user.svg' | asset_url
-      endunless
-    %}
-    <img src="{{ img_url }}" alt="" class="object-cover object-center w-64 h-64 mx-auto text-gray-400 rounded-full shadow-md md:mx-0">
-  </div>
+<div class="flex flex-col mb-5">
+  {% liquid
+    assign img_url = user.avatar.photo.versions.small
+    unless img_url
+      assign img_url = 'images/user.svg' | asset_url
+    endunless
+  %}
+
+  <img src="{{ img_url }}" alt="Picture of {{ user.name }}" class="object-cover object-center w-32 h-32 mx-auto text-gray-400 rounded-full shadow-md md:mx-0">
 </div>
