--- a/app/views/partials/theme/simple/groups/card.liquid
+++ b/app/views/partials/theme/simple/groups/card.liquid
@@ -4,14 +4,13 @@
   </a>
 
   <div class="p-6">
-    <h2 class="mb-1 text-xs font-medium tracking-widest text-gray-500">GROUP</h2>
-    <h1 class="mb-3 text-lg font-medium text-gray-900">
+    <h1 class="mb-3 text-lg font-medium">
       <a href="{% render 'link_to', group: group %}">
         {{ group.name }}
       </a>
     </h1>
     <p class="mb-3 leading-relaxed">{{ group.summary }}</p>
-    <div class="flex flex-wrap items-center ">
+    <div class="flex flex-wrap items-center">
       {% render 'theme/simple/groups/join_button', current_profile: current_profile, group: group %}
       <span class="inline-flex items-center py-1 pr-3 ml-auto mr-3 text-sm leading-none text-gray-600 border-r-2 border-gray-300 lg:ml-auto md:ml-0">
         <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
@@ -19,7 +18,7 @@
           <circle cx="12" cy="12" r="3"></circle>
         </svg>1.2K
       </span>
-      <span class="inline-flex items-center text-sm leading-none text-gray-600">
+      <span class="inline-flex items-center text-sm text-gray-600">
         <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
           <path d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"></path>
         </svg>6
