'small search' id change

--- a/app/views/partials/theme/simple/home/quick_search_form.liquid
+++ b/app/views/partials/theme/simple/home/quick_search_form.liquid
@@ -1,7 +1,7 @@
   <div class="mr-5">
     <input class="form-input mr-2"
-      name="k"
-      id="k"
+      name="search-k"
+      id="search-k"
       type="text"
       value="{{ filters.query.k }}"
      />
