--- a/app/views/pages/quick_search.liquid
+++ b/app/views/pages/quick_search.liquid
@@ -1,4 +1,4 @@
 {% liquid
-  function models = 'lib/data/queries/models/search', keyword: context.params.k, limit: 15
-  render 'theme/simple/quick_search/index', models: models, keyword: context.params.k
+  function models = 'lib/data/queries/models/search', keyword: context.params.search-k, limit: 15
+  render 'theme/simple/quick_search/index', models: models, keyword: context.params.search-k
 %}
