--- a/app/views/partials/theme/simple/activities/feed_unit.liquid
+++ b/app/views/partials/theme/simple/activities/feed_unit.liquid
@@ -9,6 +9,7 @@
     <p>{% print payload.object.body %}</p>
   </div>
 
+  <!-- Photo should be inserted only if event = create -->
   {% if payload.object.photos.size > 0 %}
     <div class="mt-2">
       <img class="object-cover rounded-lg w-9" src="{{ payload.object.photos.first.url.versions.small }}" alt="{% print payload.object.name %}">
