--- a/app/views/partials/theme/simple/admin/menu.liquid
+++ b/app/views/partials/theme/simple/admin/menu.liquid
@@ -9,7 +9,7 @@
     </li>
     <li>
       <a class="mr-2 px-3 py-2 {% if s == 'users' %}bg-gray-200{% endif %}" href='/admin/users'>
-        {{ 'admin.menu.users' | t }}
+        {{ 'admin.menu.users_title' | t }}
       </a>
     </li>
     <li>
@@ -29,7 +29,7 @@
     </li>
     <li>
       <a class="mr-2 px-3 py-2 {% if s == 'activities' %}bg-gray-200{% endif %}" href='/admin/activities'>
-        {{ 'admin.menu.activities' | t }}
+        {{ 'admin.menu.activities.name' | t }}
       </a>
     </li>
     <li>
