--- a/app/views/partials/theme/simple/dashboard/groups/form.liquid
+++ b/app/views/partials/theme/simple/dashboard/groups/form.liquid
@@ -18,30 +18,30 @@
     <input type="hidden" name="group[uuid]" value="{{ group_uuid }}" />
 
     <div class="mt-5">
-      <label class="block" for="name">Name</label>
+      <label class="block" for="name">{{ 'app.groups.form.name' | t }}</label>
       <input class="w-2/3 form-input" type="text" id="name" name="group[name]" value="{{ object.name }}" autofocus required />
       {% include 'theme/simple/field_error', errors: object.errors.name %}
     </div>
 
     <div class="mt-5">
-      <label class="block" for="summary">Summary (displayed on list)</label>
+      <label class="block" for="summary">{{ 'app.groups.form.summary' | t }}</label>
       <textarea class="w-2/3 form-input" id="summary" name="group[summary]" rows="3" required>{{ object.summary }}</textarea>
       {% include 'theme/simple/field_error', errors: object.errors.summary %}
     </div>
 
     <div class="mt-5">
-      <label class="block">Main Photo</label>
+      <label class="block">{{ 'app.groups.form.photo' | t }}</label>
       {% include 'theme/simple/photos/uppy_area' %}
     </div>
 
     <div class="mt-5">
-      <label class="block" for="description">Description</label>
+      <label class="block" for="description">{{ 'app.groups.form.description' | t }}</label>
       <textarea class="w-full form-input" id="description" name="group[description]" rows="3" required>{{ object.description }}</textarea>
 
       {% include 'theme/simple/field_error', errors: object.errors.description %}
     </div>
 
-    <button class="mt-8 button">Submit</button>
+    <button class="mt-8 button">{{ 'app.groups.form.submit' | t }}</button>
   </form>
 </div>
 
