--- a/app/views/partials/theme/simple/dashboard/orders/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/orders/index.liquid
@@ -42,6 +42,6 @@
   </table>
 {% else %}
   <p class="w-full text-lg">
-    Your orders will appear here. Right now you don't have any.
+    {{ 'app.orders.none' | t }}
   </p>
 {% endif %}
