--- a/app/views/partials/theme/simple/layout/footer.liquid
+++ b/app/views/partials/theme/simple/layout/footer.liquid
@@ -7,43 +7,43 @@
         </svg>
         <span class="ml-3 text-xl">{{ 'app.title' | t }}</span>
       </a>
-      <p class="mt-2 text-sm text-gray-500">MVP Marketplace template is modern marketplace to gather your clients together</p>
+      <p class="mt-2 text-sm text-gray-500">{{ 'app.footer.description' | t }}</p>
     </div>
 
     <div class="flex flex-wrap flex-grow mt-10 -mb-10 text-center md:pl-20 md:mt-0 md:text-left">
       <div class="w-full px-4 lg:w-1/4 md:w-1/2">
-        <h2 class="mb-3 text-sm font-medium tracking-widest text-gray-900 title-font">GENERAL</h2>
+        <h2 class="mb-3 text-sm font-medium tracking-widest text-gray-900 title-font">{{ 'app.footer.header.title.general' | t }}</h2>
         <nav class="mb-10 list-none">
           <li>
-            <a href="/" class="text-gray-600 hover:text-gray-800">Home</a>
+            <a href="/" class="text-gray-600 hover:text-gray-800">{{ 'app.footer.header.list.home' | t }}</a>
           </li>
           <li>
-            <a href="about-us" class="text-gray-600 hover:text-gray-800">About us</a>
+            <a href="about-us" class="text-gray-600 hover:text-gray-800">{{ 'app.footer.header.list.about_us' | t }}</a>
           </li>
           <li>
-            <a href="terms-of-service" class="text-gray-600 hover:text-gray-800">Terms of service</a>
+            <a href="terms-of-service" class="text-gray-600 hover:text-gray-800">{{ 'app.footer.header.list.terms_of_service' | t }}</a>
           </li>
         </nav>
       </div>
       <div class="w-full px-4 lg:w-1/4 md:w-1/2">
-        <h2 class="mb-3 text-sm font-medium tracking-widest text-gray-900 title-font">JOIN</h2>
+        <h2 class="mb-3 text-sm font-medium tracking-widest text-gray-900 title-font">{{ 'app.footer.header.title.join' | t }}</h2>
         <nav class="mb-10 list-none">
           <li>
-            <a href="/sign-up" class="text-gray-600 hover:text-gray-800">Sign Up</a>
+            <a href="/sign-up" class="text-gray-600 hover:text-gray-800">{{ 'app.footer.header.list.sign_up' | t }}</a>
           </li>
           <li>
-            <a href="/sessions/new" class="text-gray-600 hover:text-gray-800">Log In</a>
+            <a href="/sessions/new" class="text-gray-600 hover:text-gray-800">{{ 'app.footer.header.list.log_in' | t }}</a>
           </li>
         </nav>
       </div>
       <div class="w-full px-4 lg:w-1/4 md:w-1/2">
-        <h2 class="mb-3 text-sm font-medium tracking-widest text-gray-900 title-font">SUPPORT</h2>
+        <h2 class="mb-3 text-sm font-medium tracking-widest text-gray-900 title-font">{{ 'app.footer.header.title.support' | t }}</h2>
         <nav class="mb-10 list-none">
           <li>
-            <a href="/contact-us" class="text-gray-600 hover:text-gray-800">Contact Us</a>
+            <a href="/contact-us" class="text-gray-600 hover:text-gray-800">{{ 'app.footer.header.list.contact_us' | t }}</a>
           </li>
           <li>
-            <a href="/faq" class="text-gray-600 hover:text-gray-800">FAQ</a>
+            <a href="/faq" class="text-gray-600 hover:text-gray-800">{{ 'app.footer.header.list.faq' | t }}</a>
           </li>
         </nav>
       </div>
@@ -51,8 +51,8 @@
   </div>
 
   <div class="container flex flex-col flex-wrap px-5 py-4 mx-auto sm:flex-row">
-    <p class="text-sm text-center text-gray-500 sm:text-left">© 2020 {{ 'app.title' | t }} — Powered by
-      <a href="https://platformos.com" rel="noopener noreferrer" class="ml-1 text-gray-600" target="_blank">platformOS</a>
+    <p class="text-sm text-center text-gray-500 sm:text-left">{{ 'app.footer.copyrights.year' | t }} {{ 'app.footer.copyrights.title' | t }}
+      <a href="https://platformos.com" rel="noopener noreferrer" class="ml-1 text-gray-600" target="_blank">{{ 'app.footer.copyrights.product_owner' | t }}</a>
     </p>
     <div class="inline-flex justify-center mt-2 sm:ml-auto sm:mt-0 sm:justify-start">
       <a class="text-gray-500">
