--- a/app/views/partials/theme/simple/users/new.liquid
+++ b/app/views/partials/theme/simple/users/new.liquid
@@ -1,6 +1,6 @@
 <div class="container items-centermx-auto">
   <div class="mx-auto mb-2 text-center lg:w-2/6 md:w-1/2">
-    <h1 class="text-2xl">Create an Account</h1>
+    <h1 class="text-2xl">{{ 'app.users.create_account' | t }}</h1>
   </div>
 
   <div class="w-full p-8 mx-auto mt-10 bg-gray-200 rounded-lg shadow-md lg:w-2/6 md:w-1/2 md:mt-0">
