--- a/app/views/partials/theme/simple/groups/nav.liquid
+++ b/app/views/partials/theme/simple/groups/nav.liquid
@@ -2,13 +2,13 @@
     <div class="flex h-full text-lg">
       {% assign active_class = 'text-blue-500 border-b-2 font-medium border-blue-500'  %}
       <a href="/groups/show/{{ group.id }}" class="pt-5 pb-4 px-6 hover:text-blue-500 focus:outline-none {% if tab == 'activity' %}{{ active_class }}{% endif %}">
-        Activity
+        {{ 'app.groups.nav.activity' | t }}
       </a>
       <a href="/groups/about/{{ group.id }}" class="pt-5 pb-4 px-6 hover:text-blue-500 focus:outline-none {% if tab == 'about' %}{{ active_class }}{% endif %}">
-        About
+        {{ 'app.groups.nav.about' | t }}
       </a>
       <a href="/groups/members/{{ group.id }}" class="pt-5 pb-4 px-6 hover:text-blue-500 focus:outline-none {% if tab == 'members' %}{{ active_class }}{% endif %}">
-        Members
+        {{ 'app.groups.nav.members' | t }}
       </a>
     </div>
     <div class="flex items-center mr-3">
