--- a/app/views/partials/theme/simple/marketplace_setup/index.liquid
+++ b/app/views/partials/theme/simple/marketplace_setup/index.liquid
@@ -1,18 +1,17 @@
   <div class="mb-2 w-full md:w-full">
-    <h1 class="text-2xl">Global Stripe Configuration</h1>
+    <h1 class="text-2xl">{{ 'app.stripe.header' | t }}</h1>
     <ul class="leading-10 list-decimal list-inside">
       <li>
-        Please visit <a href="https://stripe.com" target="_blank" rel="extrnal noopener">https://stripe.com</a>
-        and register your <span class="font-semibold">Stripe Connect</span> account.
+        {{ 'app.stripe.register' | t }}
       </li>
       <li>
-        Copy and add this redirect URL in your
-        <a href="https://dashboard.stripe.com/settings/applications" target="_blank" rel="extrnal noopener">stripe settings:</a>
+        {{ 'app.stripe.copy_and_add' | t }}
+        <a href="https://dashboard.stripe.com/settings/applications" target="_blank" rel="extrnal noopener">{{ 'app.stripe.settings' | t }}</a>
         <br>
         <span class="px-4 py-3 bg-gray-200 rounded-sm select-all">https://{{ context.location.host }}/payments/account/success</span>
       </li>
       <li>
-        Enter your Stripe public key, secret key, and connect account client ID
+        {{ 'app.stripe.public_key' | t }}
       </li>
     </ul>
   </div>
@@ -29,6 +28,6 @@
         </label>
       {% endfor %}
 
-      <button class="mt-3 button">Save</button>
+      <button class="mt-3 button">{{ 'app.stripe.save' | t }}</button>
     </form>
   </div>
