Make feed great again

--- a/app/views/partials/theme/simple/activities/feed_unit/header.liquid
+++ b/app/views/partials/theme/simple/activities/feed_unit/header.liquid
@@ -43,9 +43,9 @@
       echo type
     endcase
     %}
-
-    <span class="text-sm text-gray-700">({{ date | strftime: '%F at %H:%M' }})</span>
   </p>
+
+  <span class="ml-auto text-sm text-gray-700">{{ date | strftime: '%F at %H:%M' }}</span>
 </div>
 
 
