--- a/app/views/partials/theme/simple/profile/sections/activity.liquid
+++ b/app/views/partials/theme/simple/profile/sections/activity.liquid
@@ -4,7 +4,7 @@
   endif
 %}
 
-<section class="grid grid-cols-3 gap-5 my-5">
+<section class="my-5">
   {% for record in list.results %}
     {% render 'theme/simple/activities/feed_unit', payload: record.payload, current_profile: current_profile %}
   {% else %}
