--- a/app/views/partials/theme/simple/activities/feed_unit.liquid
+++ b/app/views/partials/theme/simple/activities/feed_unit.liquid
@@ -1,7 +1,6 @@
 {% assign type = payload.type %}
 
-
-<div class="flex flex-col p-6 bg-white rounded-lg shadow">
+<div class="flex flex-col p-6 mb-6 bg-white rounded-lg shadow">
   {% render 'theme/simple/activities/feed_unit/header', payload: payload %}
 
   <div class="py-2 leading-snug break-all">
