Profile avatar breathing room

--- a/app/views/partials/theme/simple/profile/show.liquid
+++ b/app/views/partials/theme/simple/profile/show.liquid
@@ -1,5 +1,5 @@
 <div class="flex">
-  <div class="w-auto mr-5">
+  <div class="w-56 mr-5">
     {% liquid
       render 'theme/simple/profile/card', user: user, current_profile: current_profile
 
