Improve shadows on various parts

--- a/app/views/partials/theme/simple/dashboard/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/index.liquid
@@ -1,7 +1,7 @@
 <div class="container flex flex-wrap py-8 mx-auto">
   <div class="flex flex-wrap w-full -m-4">
     <div class="p-4 lg:w-1/2 md:w-full">
-      <div class="flex flex-col p-8 border-2 border-gray-200 rounded-lg sm:flex-row">
+      <div class="flex flex-col p-8 border border-gray-200 rounded-lg sm:flex-row">
         <div class="inline-flex items-center justify-center flex-shrink-0 w-16 h-16 mb-4 text-blue-600 bg-indigo-100 rounded-full sm:mr-8 sm:mb-0">
           <svg viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" class="p-3"><g stroke="currentColor" fill="currentColor"><path d="m43 12h-4v-3a7 7 0 0 0 -14 0v3h-4a1 1 0 0 0 -1 1v22a3.009 3.009 0 0 0 3 3h13v-2h-13a1 1 0 0 1 -1-1v-1h14v-2h-14v-18h3v3h2v-3h10v3h2v-3h3v3h2v-4a1 1 0 0 0 -1-1zm-6 0h-10v-3a5 5 0 0 1 10 0z"/><path d="m57 19h-18a1 1 0 0 0 -1 1v15a3.009 3.009 0 0 0 3 3h14a3.009 3.009 0 0 0 3-3v-15a1 1 0 0 0 -1-1zm-1 16a1 1 0 0 1 -1 1h-14a1 1 0 0 1 -1-1v-1h16zm0-3h-16v-11h16z"/><path d="m48 30a5.006 5.006 0 0 0 5-5v-2h-2v2a3 3 0 0 1 -6 0v-2h-2v2a5.006 5.006 0 0 0 5 5z"/><path d="m62.332 44.55a4.109 4.109 0 0 0 -5.176-2.062l-8.93 3.25a4 4 0 0 0 -3.174-2.959l-12.063-2.127a15.018 15.018 0 0 0 -7.735.677l-1.554.571a16.917 16.917 0 0 0 -4.1 2.179l-.221-.607a1 1 0 0 0 -1.281-.6l-11.277 4.1a1 1 0 0 0 -.6 1.281l-4.7 1.71.684 1.879 4.7-1.71 4.079 11.208 1.879-.684-4.416-12.146 9.4-3.42 5.131 14.1-2.4.875.684 1.878 3.338-1.22a1 1 0 0 0 .6-1.282l-.342-.94 2.3-.838a10.943 10.943 0 0 1 4.523-.638l4.744.329a12.842 12.842 0 0 0 5.345-.753l18.28-6.653a4 4 0 0 0 2.281-5.4zm-1.838 2.483a1.984 1.984 0 0 1 -1.127 1.035l-18.28 6.654a10.893 10.893 0 0 1 -4.523.637l-4.744-.329a12.959 12.959 0 0 0 -5.344.753l-2.306.839-3.855-10.592a14.922 14.922 0 0 1 4.07-2.256l1.552-.565a13.015 13.015 0 0 1 6.705-.587l12.058 2.127a2 2 0 1 1 -.694 3.939l-10.833-1.91-.348 1.97 10.833 1.91a3.982 3.982 0 0 0 4.506-2.77l9.672-3.521a2.13 2.13 0 0 1 2.667 1 2.01 2.01 0 0 1 -.009 1.666z" /></g></svg>
         </div>
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div class="p-4 lg:w-1/2 md:w-full">
-      <div class="flex flex-col p-8 border-2 border-gray-200 rounded-lg sm:flex-row">
+      <div class="flex flex-col p-8 border border-gray-200 rounded-lg sm:flex-row">
         <div class="inline-flex items-center justify-center flex-shrink-0 w-16 h-16 mb-4 text-blue-600 bg-indigo-100 rounded-full sm:mr-8 sm:mb-0">
           <svg enable-background="new 0 0 512.003 512.003" viewBox="0 0 512.003 512.003" xmlns="http://www.w3.org/2000/svg" class="p-4"><g fill="currentColor"><path d="m503.995 105.373c-6.868-8.498-17.076-13.371-28.004-13.371h-390.254l-3.485-24.976c-2.468-17.686-17.796-31.024-35.655-31.024h-30.597c-8.836 0-16 7.164-16 16s7.164 16 16 16h30.597c1.984 0 3.688 1.482 3.961 3.447l43.189 309.529c2.468 17.687 17.796 31.024 35.655 31.024h17.349c-1.776 5.008-2.752 10.391-2.752 16 0 26.467 21.533 48 48 48s48-21.533 48-48c0-5.609-.976-10.992-2.752-16h85.504c-1.776 5.008-2.752 10.391-2.752 16 0 26.467 21.533 48 48 48s48-21.533 48-48c0-5.609-.976-10.992-2.752-16h34.753c8.836 0 16-7.164 16-16s-7.164-16-16-16h-318.597c-1.984 0-3.688-1.482-3.961-3.447l-3.984-28.553h315.102c16.858 0 31.663-11.965 35.205-28.458l39.429-183.997c2.291-10.681-.333-21.679-7.199-30.174zm-295.995 322.629c0 8.822-7.178 16-16 16s-16-7.178-16-16 7.178-16 16-16 16 7.177 16 16zm176 0c0 8.822-7.178 16-16 16s-16-7.178-16-16 7.178-16 16-16 16 7.177 16 16zm95.905-299.163-39.428 183.993c-.394 1.836-2.042 3.169-3.917 3.169h-319.568l-26.79-192h385.788c1.583 0 2.569.808 3.117 1.486.547.677 1.129 1.808.798 3.352z"/></g></svg>
         </div>
@@ -43,7 +43,7 @@
       </div>
     </div>
     <div class="p-4 lg:w-1/2 md:w-full">
-      <div class="flex flex-col p-8 border-2 border-gray-200 rounded-lg sm:flex-row">
+      <div class="flex flex-col p-8 border border-gray-200 rounded-lg sm:flex-row">
         <div class="inline-flex items-center justify-center flex-shrink-0 w-16 h-16 mb-4 text-blue-600 bg-indigo-100 rounded-full sm:mr-8 sm:mb-0">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="p-3"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" /> </svg>
         </div>
