--- a/app/views/partials/theme/simple/admin/index.liquid
+++ b/app/views/partials/theme/simple/admin/index.liquid
@@ -1,7 +1,7 @@
 <div class="container flex flex-wrap mx-auto mt-6">
   <div class="flex flex-wrap w-full">
     <div class="lg:w-1/2 md:w-full">
-      <div class="flex flex-col p-6 border-2 border-gray-200 rounded-lg sm:flex-row">
+      <div class="flex flex-col p-6 border border-gray-200 rounded-lg sm:flex-row">
         <div class="flex-grow">
           <h2 class="mb-3 text-lg font-medium text-gray-900">Recent items</h2>
           <div class="mx-4">
@@ -36,7 +36,7 @@
       </div>
     </div>
     <div class="pl-4 lg:w-1/2 md:w-full">
-      <div class="flex flex-col p-6 border-2 border-gray-200 rounded-lg sm:flex-row">
+      <div class="flex flex-col p-6 border border-gray-200 rounded-lg sm:flex-row">
         <div class="flex-grow">
           <h2 class="mb-3 text-lg font-medium text-gray-900">Event logs</h2>
         </div>
