Scaffold for generating crud
Scaffold: generate pages, commands, queries

Scaffold: add argument basic validation

Fix translation file

Scaffold: generate html, translations

Scaffold: fix delete; edit

Contact form: created with generator

Fix

--- a/app/views/partials/theme/simple/admin/menu.liquid
+++ b/app/views/partials/theme/simple/admin/menu.liquid
@@ -33,6 +33,11 @@
       </a>
     </li>
     <li>
+      <a class="mr-2 px-3 py-2 {% if s == 'support-tickets' %}bg-gray-200{% endif %}" href='/admin/support-tickets'>
+        {{ 'admin.menu.support-tickets' | t }}
+      </a>
+    </li>
+    <li>
       <a class="mr-2 px-3 py-2 {% if s == 'setup' %}bg-gray-200{% endif %}" href='/marketplace_setup'>
         {{ 'admin.menu.setup' | t }}
       </a>
