--- a/app/views/pages/passwords/reset.liquid
+++ b/app/views/pages/passwords/reset.liquid
@@ -1,1 +1,1 @@
-{% include 'theme/simple/authentication_links/new' %}
+{% include 'theme/simple/authentication_links/new', testcafe: context.params.testcafe %}
