--- a/app/views/partials/theme/simple/authentication_links/new.liquid
+++ b/app/views/partials/theme/simple/authentication_links/new.liquid
@@ -11,6 +11,7 @@
         <label class="block mt-3" for="email">
           <span class="block">{% print 'app.users.attr.email' | t %}</span>
           <input name="authentication_link[email]" type="email" id="email" value="{{ object.email }}" class="w-full form-input" autofocus required />
+          <input name="testcafe" value="{{ testcafe }}" type="hidden">
           {% include 'theme/simple/field_error', errors: object.errors.email %}
         </label>
 
