--- a/app/views/partials/lib/commands/authentication_links/create.liquid
+++ b/app/views/partials/lib/commands/authentication_links/create.liquid
@@ -1,18 +1,10 @@
----
-metadata:
-  type: command
-  returning: string
-  parameters:
-    - name: email
-    - name: host
----
 {% liquid
-  function_rc object = 'lib/commands/authentication_links/create/build', user: user, host: host
-  function_rc object = 'lib/commands/authentication_links/create/check', object: object
+  function object = 'lib/commands/authentication_links/create/build', email: email, host: host
+  function object = 'lib/commands/authentication_links/create/check', object: object
 
   if object.valid
-    function_rc object = 'lib/commands/authentication_links/create/execute', object: object
+    function object = 'lib/commands/authentication_links/create/execute', object: object
   endif
 
-  return_rc object
+  return object
 %}
