Stripe: fix tests; use seperate layout for tests

--- a/modules/stripe/public/views/partials/test/commands/account/create/call_test.liquid
+++ b/modules/stripe/public/views/partials/test/commands/account/create/call_test.liquid
@@ -5,13 +5,13 @@
 {% endparse_json %}
 
 {% liquid
-  include 'modules/stripe/lib/account/create/call', object: object
+  function object = 'modules/stripe/lib/account/create/call', object: object
 
-  if context.exports.object.valid != true
+  if object.valid != true
     include 'test/register_error', contract: contract, field_name: 'base', key: 'test.should.be_valid'
   endif
 
-  if context.exports.object.gateway_id == blank
-    include 'test/register_error', contract: contract, field_name: 'gateway_id', key: 'test.should.not.be_null'
+  if object.gateway_id == blank
+    include 'test/register_error', contract: contract, field_name: 'gateway_id', key: 'test.should.not.be_blank'
   endif
 %}
