--- a/modules/stripe/public/views/partials/test/commands/webhooks/account_updated/validate_test.liquid
+++ b/modules/stripe/public/views/partials/test/commands/webhooks/account_updated/validate_test.liquid
@@ -3,7 +3,7 @@
 {% endparse_json %}
 
 {% liquid
-  function_rc object = 'modules/stripe/lib/webhooks/account_updated/validate', object: object
+  function object = 'modules/stripe/lib/webhooks/account_updated/validate', object: object
 
   comment
     TODO: stub webhook endpoint secret in database
