--- a/modules/stripe/public/views/partials/lib/account/create/call.liquid
+++ b/modules/stripe/public/views/partials/lib/account/create/call.liquid
@@ -1,8 +1,8 @@
 {% liquid
-  function_rc object = 'modules/stripe/lib/account/create/build', object: object
+  function object = 'modules/stripe/lib/account/create/build', object: object
   if object.valid
-    function_rc object = 'modules/stripe/lib/account/create/execute', object: object
+    function object = 'modules/stripe/lib/account/create/execute', object: object
   endif
 
-  return_rc object
+  return object
 %}
