--- a/modules/stripe/public/views/partials/lib/account/create/execute.liquid
+++ b/modules/stripe/public/views/partials/lib/account/create/execute.liquid
@@ -9,7 +9,7 @@
     assign object = r.model
     hash_assign object['valid'] = true
   endif
-  log result type: 'stripe/account/create/execute'
+  log object, type: 'stripe/account/create/execute'
 
-  return_rc object
+  return object
 %}
