--- a/modules/stripe/public/views/partials/lib/webhooks/account_updated/validate.liquid
+++ b/modules/stripe/public/views/partials/lib/webhooks/account_updated/validate.liquid
@@ -2,11 +2,11 @@
   assign c = '{ "errors": {}, "valid": true }' | parse_json
 
   if object.id == blank
-    include 'lib/register_error', contract: c, field_name: 'id', key: 'test.should.not.be_empty'
+    include 'lib/register_error', contract: c, field_name: 'id', key: 'test.should.not.be_blank'
   endif
 
   hash_assign object['valid'] = c.valid
   hash_assign object['errors'] = c.errors
 
-  return_rc object
+  return object
 %}
