--- a/modules/stripe/public/views/partials/lib/stripe_webhook/create/call.liquid
+++ b/modules/stripe/public/views/partials/lib/stripe_webhook/create/call.liquid
@@ -1,6 +1,6 @@
 {% parse_json data %}
   {
-    "url": "https://{{ context.location.host }}{{path}}",
+    "url": "https://{{ host }}{{path}}",
     "connect": "{{connect}}",
     "enabled_events": {
        "0": "{{event}}"
