--- a/app/views/pages/marketplace_setup/create.liquid
+++ b/app/views/pages/marketplace_setup/create.liquid
@@ -4,7 +4,7 @@ method: post
 ---
 {% liquid
   include 'lib/must_be_superadmin'
-  function_rc object = 'lib/commands/marketplace_setup/create/call', constants: context.params.constants
+  function object = 'lib/commands/marketplace_setup/create/call', constants: context.params.constants, context: context
   if object.valid
     redirect_to '/'
   else
