--- a/modules/stripe/public/views/partials/lib/account/update/call.liquid
+++ b/modules/stripe/public/views/partials/lib/account/update/call.liquid
@@ -1,9 +1,9 @@
 {% liquid
-  function_rc object = 'modules/stripe/lib/account/update/build', object: object
-  function_rc object = 'modules/stripe/lib/account/update/validate', object: object
+  function object = 'modules/stripe/lib/account/update/build', object: object
+  function object = 'modules/stripe/lib/account/update/validate', object: object
 
   if object.valid
-    function_rc object = 'modules/stripe/lib/account/update/execute', object: object
+    function object = 'modules/stripe/lib/account/update/execute', object: object
   endif
-  return_rc object
+  return object
 %}
